--- a/code/index.html
+++ b/code/index.html
@@ -33,7 +33,7 @@
      
       <article class="one">
         <div class="big-news">
-          <img src="/Volumes/NO_NAME/_technigo/Project/project-news-site/code/img/trainstation.jpg" alt="Trainstation">
+          <img src="img/trainstation.jpg" alt="Trainstation">
           <h1> Interrail in Europe</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing
             elit, sed do eiusmod tempor incididunt ut labore et 
@@ -48,7 +48,7 @@
   
       <article class="other-news">
         <div class="to">
-          <img src="/Volumes/NO_NAME/_technigo/Project/project-news-site/code/img/map-iceland.jpg" alt="Iceland">
+          <img src="img/map-iceland.jpg" alt="Iceland">
           <h2>Iceland by car</h2>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing
             elit, sed do eiusmod tempor incididunt ut labore et 
@@ -59,7 +59,7 @@
       </article>
 
       <article class="other-news">
-        <img src="/Volumes/NO_NAME/_technigo/Project/project-news-site/code/img/map-australia.jpg" alt="Australia">
+        <img src="img/map-australia.jpg" alt="Australia">
         <h2>Australia in a Caravan</h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing
           elit, sed do eiusmod tempor incididunt ut labore et 
@@ -69,7 +69,7 @@
       </article>
 
       <article class="other-news">
-        <img src="/Volumes/NO_NAME/_technigo/Project/project-news-site/code/img/are.jpg" alt="Åre">
+        <img src="img/are.jpg" alt="Åre">
         <h2>Skiing in Åre </h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing
           elit, sed do eiusmod tempor incididunt ut labore et 
@@ -79,7 +79,7 @@
       </article>
 
       <article class="other-news">
-        <img src="/Volumes/NO_NAME/_technigo/Project/project-news-site/code/img/surfer-bali.jpg" alt="Bali">
+        <img src="img/surfer-bali.jpg" alt="Bali">
         <h2>Surfers paradise in Bali</h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing
           elit, sed do eiusmod tempor incididunt ut labore et 
@@ -89,7 +89,7 @@
       </article>
 
       <article class="other-news">
-        <img src="/Volumes/NO_NAME/_technigo/Project/project-news-site/code/img/portugal-algarve.jpg" alt="Portugal">
+        <img src="img/portugal-algarve.jpg" alt="Portugal">
         <h2>Surfing in the Atlantic</h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing
           elit, sed do eiusmod tempor incididunt ut labore et 
