--- a/code/index.html
+++ b/code/index.html
@@ -22,18 +22,18 @@
     </div>
 
     <a href="http://google.se">
-        <svg class="menu" fill="currentColor" focusable="false" height="1em" stroke="currentColor" stroke-width="0" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg">
+        <svg class="menu" fill="currentColor" focusable="false" height="3em" stroke="currentColor" stroke-width="0" viewBox="0 0 20 20" width="2em" xmlns="http://www.w3.org/2000/svg">
             <path d="M14 3H2V4H14V3Z"></path>
             <path d="M14 7H2V8H14V7Z"></path>
             <path d="M14 11H2V12H14V11Z"></path>
         </svg> 
     </a>
-    <div class="links">
-        <a href="http://google.se">Greens</a>
-        <a href="http://google.se">Flowers</a>
-        <a href="http://google.se">Seeds</a>
-        <a href="http://google.se">Archive</a>
-    </div>
+
+        <a href="http://google.se" class="links">Greens</a>
+        <a href="http://google.se" class="links">Flowers</a>
+        <a href="http://google.se" class="links">Seeds</a>
+        <a href="http://google.se"class="links">Archive</a>
+
     
 </header>
 <div class="content">
@@ -134,3 +134,5 @@
 
 </body>
 </html>
+
+Fixa vad det är som händer i headern när jag har ändrat med links-klassen. Är det en css fråga?
