--- a/code/index.html
+++ b/code/index.html
@@ -24,50 +24,60 @@
         </nav>
       </header>
       
-      <div class="article article--featured">
+      <!-- <div class="article article--featured">
         <a href="#">
-          <!-- <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg"> -->
+          BILD
           <h1 class="article-title">Featured article title</h1>
           <p class="article-text">Featured article text</p>
         </a>
-      </div>
+      </div> -->
       
       <section class="article-grid">
-        <div class="article article--regular">
-          <a href="#">
-            <!-- <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg"> -->
+        <a href="#" class="article article--regular">
+          <div class="article-picture">
+            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+          </div>
+          <div class="article-content">
             <h1 class="article-title">Regular article title</h1>
             <p class="article-text">Regular article text</p>
-          </a>
-        </div>
-        <div class="article article--regular">
-          <a href="">
-            <!-- <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg"> -->
+          </div>
+        </a>
+        <a href="#" class="article article--regular">
+          <div class="article-picture">
+            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+          </div>
+          <div class="article-content">
             <h1 class="article-title">Regular article title</h1>
             <p class="article-text">Regular article text</p>
-          </a>
-        </div>
-        <div class="article article--regular">
-          <a href="#">
-            <!-- <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg"> -->
+          </div>
+        </a>
+        <a href="#" class="article article--regular">
+          <div class="article-picture">
+            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+          </div>
+          <div class="article-content">
             <h1 class="article-title">Regular article title</h1>
             <p class="article-text">Regular article text</p>
-          </a>
-        </div>
-        <div class="article article--regular">
-          <a href="#">
-            <!-- <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg"> -->
+          </div>
+        </a>
+        <a href="#" class="article article--regular">
+          <div class="article-picture">
+            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+          </div>
+          <div class="article-content">
             <h1 class="article-title">Regular article title</h1>
             <p class="article-text">Regular article text</p>
-          </a>
-        </div>
-        <div class="article article--regular">
-          <a href="#">
-            <!-- <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg"> -->
+          </div>
+        </a>
+        <a href="#" class="article article--regular">
+          <div class="article-picture">
+            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+          </div>
+          <div class="article-content">
             <h1 class="article-title">Regular article title</h1>
             <p class="article-text">Regular article text</p>
-          </a>
-        </div>
+          </div>
+        </a>
       </section>
     </div>
   </body>
