--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text&family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -27,8 +30,8 @@
       <!-- <div class="article article--featured">
         <a href="#">
           BILD
-          <h1 class="article-title">Featured article title</h1>
-          <p class="article-text">Featured article text</p>
+          <h1>Featured article title</h1>
+          <p>Featured article text</p>
         </a>
       </div> -->
       
@@ -38,8 +41,8 @@
             <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
           </div>
           <div class="article-content">
-            <h1 class="article-title">Regular article title</h1>
-            <p class="article-text">Regular article text</p>
+            <h1>Regular article title</h1>
+            <p>Regular article text</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -47,8 +50,8 @@
             <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
           </div>
           <div class="article-content">
-            <h1 class="article-title">Regular article title</h1>
-            <p class="article-text">Regular article text</p>
+            <h1>Regular article title</h1>
+            <p>Regular article text</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -56,8 +59,8 @@
             <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
           </div>
           <div class="article-content">
-            <h1 class="article-title">Regular article title</h1>
-            <p class="article-text">Regular article text</p>
+            <h1>Regular article title</h1>
+            <p>Regular article text</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -65,8 +68,8 @@
             <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
           </div>
           <div class="article-content">
-            <h1 class="article-title">Regular article title</h1>
-            <p class="article-text">Regular article text</p>
+            <h1>Regular article title</h1>
+            <p>Regular article text</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -74,8 +77,8 @@
             <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
           </div>
           <div class="article-content">
-            <h1 class="article-title">Regular article title</h1>
-            <p class="article-text">Regular article text</p>
+            <h1>Regular article title</h1>
+            <p>Regular article text</p>
           </div>
         </a>
       </section>
