Add header styling

--- a/code/index.html
+++ b/code/index.html
@@ -20,10 +20,10 @@
           <span class="site-name">Catnews</span>
         </a>
         <nav class="main-menu">
-            <a href="#" class="main-menu-item">Menu item</a>
-            <a href="#" class="main-menu-item">Menu item</a>
-            <a href="#" class="main-menu-item">Menu item</a>
-            <a href="#" class="main-menu-item">Menu item</a>
+            <a href="#" class="main-menu-item">Home</a>
+            <a href="#" class="main-menu-item">Culture</a>
+            <a href="#" class="main-menu-item">Lifestyle</a>
+            <a href="#" class="main-menu-item">Adventure</a>
         </nav>
       </header>
       
