--- a/code/index.html
+++ b/code/index.html
@@ -26,16 +26,21 @@
             <a href="#" class="main-menu-item">Adventure</a>
         </nav>
       </header>
-      
-      <!-- <div class="article article--featured">
-        <a href="#">
-          BILD
-          <h1>Featured article title</h1>
-          <p>Featured article text</p>
-        </a>
-      </div> -->
+
       
       <section class="article-grid">
+        <a href="#" class="article article--featured">
+          <div class="article-picture">
+            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+          </div>
+          <div class="article-content">
+            <h1>Featured article title</h1>
+            <p>Featured article text</p>
+          </div>
+        </a>
+
+
+
         <a href="#" class="article article--regular">
           <div class="article-picture">
             <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
