Added a new mobile nav, cleaned up some code- final version hand in sprint 0, w0

--- a/code/index.html
+++ b/code/index.html
@@ -12,14 +12,28 @@
 </head>
 
 <body>
-<div class="navbar">
-    <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home page</a> 
-    <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
-    <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
-    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a> 
-        <div class= "logo-style">
+    <nav role="navigation">
+        <div id="menu-hamburger">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu-expand">
+            <a class= "active" href="#"><li>Home</li></a>
+            <a href="#"><li>About</li></a>
+            <a href="#"><li>Info</li></a>
+            <a href="#"><li>Contact</li></a>
+          </ul>
+        </div>
+      </nav>
+      <div class= "logo-style">
         <img class ="logo" src="https://i.ibb.co/ScjmQF7/Black-Minimal-Modern-Letter-H-Logo-100-100px-100-75px.png" alt="Black-Minimal-Modern-Letter-H-Logo-100-100px-100-75px">
     </div> 
+</div>
+
+
+
+
 </div>
 <div class="h1"> 
     <div style="text-align: center;">
