Increase readability in fonts

--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -31,7 +31,7 @@
       <section class="article-grid">
         <a href="#" class="article article--featured">
           <div class="article-picture">
-            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+            <img src="http://placekitten.com/600/300" />
           </div>
           <div class="article-content">
             <h1>Featured article title</h1>
@@ -43,7 +43,7 @@
 
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+            <img src="http://placekitten.com/400/300" />
           </div>
           <div class="article-content">
             <h1>Regular article title</h1>
@@ -52,7 +52,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+            <img src="http://placekitten.com/500/350" />
           </div>
           <div class="article-content">
             <h1>Regular article title</h1>
@@ -61,7 +61,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+            <img src="http://placekitten.com/450/200" />
           </div>
           <div class="article-content">
             <h1>Regular article title</h1>
@@ -70,7 +70,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+            <img src="http://placekitten.com/400/200" />
           </div>
           <div class="article-content">
             <h1>Regular article title</h1>
@@ -79,7 +79,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg" />
+            <img src="http://placekitten.com/500/500" />
           </div>
           <div class="article-content">
             <h1>Regular article title</h1>
