--- a/code/index.html
+++ b/code/index.html
@@ -2,20 +2,112 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+
+
+
+
+
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img class="logo" src="logo.svg" alt="technigo logo">
+      <h1>Travelers News</h1>
+      <nav class="navbar">
+        <ul>
+          <li><a href="null">News</a></li>
+           <li><a href="null">About</a></li>
+           <li><img class="logo2" src="logo.svg" alt="technigo logo"></li>
+           <li><a href="null">Sign Up</a></li>
+           <li><a href="null">Log In</a></li>
+        </ul>
+      </nav>
+      <img class="menu" src="menu.svg" alt="menu icon">
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
 
-    <section class="">
+
+
+
+
+
+
+    <section class="big-news">
+        <img src="Tokyo1.jpeg" alt="Tokyo">
+        <div class="big-news-text">
+          <h1>Tokyo, the largest city in the world!</h1>
+         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Maiores reiciendis tempore ratione tenetur accusantium sunt 
+        minima commodi deserunt expedita, delectus impedit libero 
+        eveniet nulla culpa autem optio. Nobis, nam magnam!</p>
+        <button>Read more</button>
+         </div>
+        </section>
+
+
+
+        <section class="small-news">
+      <div class="small-news-div">
+        <img src="Delhi2.jpeg" alt="Delhi">
+        <div class="small-news-div-text">
+        <h3>Delhi</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Maiores reiciendis tempore ratione tenetur accusantium sunt minima</p>
+      </div></div>
+      <div class="small-news-div">
+        <img src="Shanghai3.jpeg" alt="Shanghai">
+        <div class="small-news-div-text">
+        <h3>Shanghai</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Maiores reiciendis tempore ratione tenetur accusantium sunt minima</p>
+      </div></div>
+      <div class="small-news-div">
+        <img src="SaoPaulo4.jpeg" alt="Sao Paulo">
+        <div class="small-news-div-text">
+        <h3>Sao Paulo</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Maiores reiciendis tempore ratione tenetur accusantium sunt minima</p>
+      </div></div>
+      <div class="small-news-div">
+        <img src="Mexicocity5.jpeg" alt="Mexico City">
+        <div class="small-news-div-text">
+        <h3>Mexico City</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Maiores reiciendis tempore ratione tenetur accusantium sunt minima</p>
+      </div></div>
+      <div class="small-news-div">
+        <img src="Dhaka6.jpeg" alt="Dhaka">
+        <div class="small-news-div-text">
+        <h3>Dhaka</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Maiores reiciendis tempore ratione tenetur accusantium sunt minima</p>
+      </div></div>
+      <div class="small-news-div">
+        <img src="Cairo7.jpeg" alt="Cairo">
+        <div class="small-news-div-text">
+        <h3>Cairo</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Maiores reiciendis tempore ratione tenetur accusantium sunt minima</p>
+      </div></div>
+      <div class="small-news-div">
+        <img src="Beijing8.jpeg" alt="Beijing">
+        <div class="small-news-div-text">
+        <h3>Beijing</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Maiores reiciendis tempore ratione tenetur accusantium sunt minima</p>
+      </div></div>
+      <div class="small-news-div">
+        <img src="Mumbai9.jpeg" alt="Mumbai">
+        <div class="small-news-div-text">
+        <h3>Mumbai</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Maiores reiciendis tempore ratione tenetur accusantium sunt minima</p>
+      </div></div>
+      
       <!-- The other news  -->
     </section>
   </body>
