Fine tune fonts, upload article photos

--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -34,20 +34,18 @@
             <img src="http://placekitten.com/600/300" />
           </div>
           <div class="article-content">
-            <h1>Featured article title</h1>
-            <p>Featured article text</p>
+            <h1>Corporis sint, quisquam so amet or susci rnatur.</h1>
+            <p>Modi et so omnis laboriosam dolore. Adipisicing ipsam so labore but occaecat incidunt but exercitation, corporis. Quisquam. Error fugit deserunt dolor but officia or consectetur. Ex laboriosam for nequeporro yet commodi. In accusantium.</p>
           </div>
         </a>
-
-
 
         <a href="#" class="article article--regular">
           <div class="article-picture">
             <img src="http://placekitten.com/400/300" />
           </div>
           <div class="article-content">
-            <h1>Regular article title</h1>
-            <p>Regular article text</p>
+            <h1>Very standard title here</h1>
+            <p>Abyssinian siberian but bombay. Cornish rex american bobtail british shorthair manx so donskoy but balinese . Persian persian, scottish fold but norwegian forest.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -55,8 +53,8 @@
             <img src="http://placekitten.com/500/350" />
           </div>
           <div class="article-content">
-            <h1>Regular article title</h1>
-            <p>Regular article text</p>
+            <h1>Hello I'm a cute cat</h1>
+            <p>Devonshire rex cornish rex and puma so cheetah. Savannah himalayan cheetah yet turkish angora or cougar. American bobtail tom.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -64,8 +62,8 @@
             <img src="http://placekitten.com/450/200" />
           </div>
           <div class="article-content">
-            <h1>Regular article title</h1>
-            <p>Regular article text</p>
+            <h1>Recent study: cats are extremly cute</h1>
+            <p>Aperiam voluptas yet vitae veniam or quam or iure. Voluptate ad yet ab for duis quaerat for non. Nequeporro.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -73,8 +71,8 @@
             <img src="http://placekitten.com/400/200" />
           </div>
           <div class="article-content">
-            <h1>Regular article title</h1>
-            <p>Regular article text</p>
+            <h1>This is a really long title about nothing in particular</h1>
+            <p>Skulle också kunna vara en lorem ipsum, men icke.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -82,8 +80,35 @@
             <img src="http://placekitten.com/500/500" />
           </div>
           <div class="article-content">
-            <h1>Regular article title</h1>
-            <p>Regular article text</p>
+            <h1>Meow, says Bönan and Thea</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue sem et aliquam blandit. Proin posuere ex non ante euismod iaculis. Nullam cursus, lacus non.</p>
+          </div>
+        </a>
+        <a href="#" class="article article--regular">
+          <div class="article-picture">
+            <img src="http://placekitten.com/500/500" />
+          </div>
+          <div class="article-content">
+            <h1>Meow, says Bönan and Thea</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue sem et aliquam blandit. Proin posuere ex non ante euismod iaculis. Nullam cursus, lacus non.</p>
+          </div>
+        </a>
+        <a href="#" class="article article--regular">
+          <div class="article-picture">
+            <img src="http://placekitten.com/500/500" />
+          </div>
+          <div class="article-content">
+            <h1>Meow, says Bönan and Thea</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue sem et aliquam blandit. Proin posuere ex non ante euismod iaculis. Nullam cursus, lacus non.</p>
+          </div>
+        </a>
+        <a href="#" class="article article--regular">
+          <div class="article-picture">
+            <img src="http://placekitten.com/500/500" />
+          </div>
+          <div class="article-content">
+            <h1>Meow, says Bönan and Thea</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue sem et aliquam blandit. Proin posuere ex non ante euismod iaculis. Nullam cursus, lacus non.</p>
           </div>
         </a>
       </section>
