--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
     <title>Catnews</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
+    <script src="article-images/https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
       <section class="article-grid">
         <a href="#" class="article article--featured">
           <div class="article-picture">
-            <img src="http://placekitten.com/600/300" />
+            <img src="article-images/article_picture_01.jpg" />
           </div>
           <div class="article-content">
             <h1>Corporis sint, quisquam so amet or susci rnatur.</h1>
@@ -41,7 +41,7 @@
 
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="http://placekitten.com/400/300" />
+            <img src="article-images/article_picture_02.jpg" />
           </div>
           <div class="article-content">
             <h1>Very standard title here</h1>
@@ -50,7 +50,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="http://placekitten.com/500/350" />
+            <img src="article-images/article_picture_03.jpg" />
           </div>
           <div class="article-content">
             <h1>Hello I'm a cute cat</h1>
@@ -59,7 +59,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="http://placekitten.com/450/200" />
+            <img src="article-images/article_picture_04.jpg" />
           </div>
           <div class="article-content">
             <h1>Recent study: cats are extremly cute</h1>
@@ -68,7 +68,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="http://placekitten.com/400/200" />
+            <img src="article-images/article_picture_05.jpg" />
           </div>
           <div class="article-content">
             <h1>This is a really long title about nothing in particular</h1>
@@ -77,7 +77,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="http://placekitten.com/500/500" />
+            <img src="article-images/article_picture_06.jpg" />
           </div>
           <div class="article-content">
             <h1>Meow, says Bönan and Thea</h1>
@@ -86,7 +86,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="http://placekitten.com/500/500" />
+            <img src="article-images/article_picture_07.jpg" />
           </div>
           <div class="article-content">
             <h1>Meow, says Bönan and Thea</h1>
@@ -95,7 +95,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="http://placekitten.com/500/500" />
+            <img src="article-images/article_picture_08.jpg" />
           </div>
           <div class="article-content">
             <h1>Meow, says Bönan and Thea</h1>
@@ -104,7 +104,7 @@
         </a>
         <a href="#" class="article article--regular">
           <div class="article-picture">
-            <img src="http://placekitten.com/500/500" />
+            <img src="article-images/article_picture_09.jpg" />
           </div>
           <div class="article-content">
             <h1>Meow, says Bönan and Thea</h1>
