--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Greece: Islands</title>
+    <title>Greek Islands</title>
     <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/3cc92f3716.js"
@@ -14,8 +14,8 @@
   <body>
     <!--header+nav bar-->
     <header>
+      <h1>Greece</h1>
       <nav class="nav-bar">
-        <h1>Greece</h1>
         <ul class="nav-links">
           <li class="nav-item"><a href="#featured">Featured</a></li>
           <li class="nav-item"><a href="#islands">Islands</a></li>
@@ -26,7 +26,6 @@
     </header>
     <div class="container">
       <!--featured island-->
-
       <section class="featured">
         <img src="assets/images/milos.jpg" alt="Picture of Milos" />
         <div class="featured-text">
