small adjustments of text

--- a/code/index.html
+++ b/code/index.html
@@ -102,7 +102,7 @@
     </div>
     <div class="news-item">
         <img class ="fit-articleimage" img src="https://i.ibb.co/hDwY89z/Beyond-3.png" alt="Squiggly rainbow in blue">
-            <h4>BEEF SALES DECLINE, LAB-GROWN "MEAT" INCREASINGLY MORE POPULAR</h4>
+            <h4>BEEF SALES DECLINE, LAB-GROWN "MEAT" MORE POPULAR</h4>
                 <p> Beef sales continue to decline as lab grown meat-substitutes are on the rise. The Israeli company who first
                 created kosher "bacon" now expands world-wide [...]
             </p>    
