--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
     <title>Catnews</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="article-images/https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@500&family=Libre+Caslon+Text:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
