created a news site

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,115 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<html lang="en">
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Latest News Online</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+
+  <!--HEADER-->
+  <header class="header">
+    <div class="header-logo">
+      <img src="images/Logo.png" alt="Logotype" class="logo-image">
+    </div>
+    <nav class="header-menu">
+      <input class="search" placeholder="Search" type="text">
+      <a href="#" class="header-menu-link">Top news</a>
+      <a href="#" class="header-menu-link">Latest</a>
+      <a href="#" class="header-menu-link">Sport</a>
+      <a href="#" class="header-menu-link">Weather</a>
+      <a href="#" class="header-menu-link">Contact</a>
+      <i alt="Menu" class="header-menu-image"></i>
+    </nav>
+  </header>
+
+  <!--ARTICLE-->
+  <section class="big-article">
+    <img src="http://unsplash.it/400/400" alt="Big image of news" class="big-image">
+    <article class="head-news">
+      <h1 class="head-title">Big Title</h1>
+
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis hic reiciendis nesciunt id aut veritatis
+        dolores beatae esse, iusto rem repudiandae amet repellat. Hic iure eligendi quos. Dicta commodi incidunt aliquid
+        tenetur, dolore, tempora ad, perferendis exercitationem hic numquam provident mollitia labore accusamus earum.
+      </p>
+      <p>Odio, doloribus amet, quasi id accusantium magni harum perspiciatis.</p>
+      <button class="button">Read more...</button>
+    </article>
+  </section>
+
+  <!--NEWS-->
+  <section class="news">
+    <div class="grid-item">
+      <img src="http://unsplash.it/300/150?1" alt="" class="grid-item-image">
+      <h3>Title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum labore atque adipisci odio velit asperiores
+        quia praesentium sit, possimus earum! Minus esse nisi modi dolor molestiae aliquam? Alias, numquam quod.</p>
+      <button class="button">Read more...</button>
+    </div>
+    <div class="grid-item">
+      <img src="http://unsplash.it/300/150?2" alt="" class="grid-item-image">
+      <h3>Title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum labore atque adipisci odio velit asperiores
+        quia praesentium sit, possimus earum! Minus esse nisi modi dolor molestiae aliquam? Alias, numquam quod.</p>
+      <button class="button">Read more...</button>
+    </div>
+    <div class="grid-item">
+      <img src="http://unsplash.it/300/150?3" alt="" class="grid-item-image">
+      <h3>Title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum labore atque adipisci odio velit asperiores
+        quia praesentium sit, possimus earum! Minus esse nisi modi dolor molestiae aliquam? Alias, numquam quod.</p>
+      <button class="button">Read more...</button>
+    </div>
+    <div class="grid-item">
+      <img src="http://unsplash.it/300/150?4" alt="" class="grid-item-image">
+      <h3>Title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum labore atque adipisci odio velit asperiores
+        quia praesentium sit, possimus earum! Minus esse nisi modi dolor molestiae aliquam? Alias, numquam quod.</p>
+      <button class="button">Read more...</button>
+    </div>
+    <div class="grid-item">
+      <img src="http://unsplash.it/300/150?5" alt="" class="grid-item-image">
+      <h3>Title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum labore atque adipisci odio velit asperiores
+        quia praesentium sit, possimus earum! Minus esse nisi modi dolor molestiae aliquam? Alias, numquam quod.</p>
+      <button class="button">Read more...</button>
+    </div>
+    <div class="grid-item">
+      <img src="http://unsplash.it/300/150?6" alt="" class="grid-item-image">
+      <h3>Title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum labore atque adipisci odio velit asperiores
+        quia praesentium sit, possimus earum! Minus esse nisi modi dolor molestiae aliquam? Alias, numquam quod.</p>
+      <button class="button">Read more...</button>
+    </div>
+    <div class="grid-item">
+      <img src="http://unsplash.it/300/150?1" alt="" class="grid-item-image">
+      <h3>Title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum labore atque adipisci odio velit asperiores
+        quia praesentium sit, possimus earum! Minus esse nisi modi dolor molestiae aliquam? Alias, numquam quod.</p>
+      <button class="button">Read more...</button>
+    </div>
+    <div class="grid-item">
+      <img src="http://unsplash.it/300/150?7" alt="" class="grid-item-image">
+      <h3>Title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum labore atque adipisci odio velit asperiores
+        quia praesentium sit, possimus earum! Minus esse nisi modi dolor molestiae aliquam? Alias, numquam quod.</p>
+      <button class="button">Read more...</button>
+    </div>
+  </section>
+  
+  <!--FOOTER-->
+  <nav class="footer">
+    <a href="#" class="footer-menu-link">Login</a>
+    <a href="#" class="footer-menu-link">Privacy Policy</a>
+    <a href="#" class="footer-menu-link">Accessibility</a>
+    <a href="#" class="footer-menu-link">Cookies</a>
+  </nav>
+
+</body>
+
 </html>
