Add article text content

--- a/code/index.html
+++ b/code/index.html
@@ -34,8 +34,8 @@
             <img src="article-images/article_picture_01.jpg" />
           </div>
           <div class="article-content">
-            <h1>Corporis sint, quisquam so amet or susci rnatur.</h1>
-            <p>Modi et so omnis laboriosam dolore. Adipisicing ipsam so labore but occaecat incidunt but exercitation, corporis. Quisquam. Error fugit deserunt dolor but officia or consectetur. Ex laboriosam for nequeporro yet commodi. In accusantium.</p>
+            <h1>Meet Wilfred, the cat who simply can't get enough of hiking</h1>
+            <p>Having climbed three mountains, a hill and two trees so far this summer, he's already planning his next adventure - the local fishing harbour. Come along as we dive deeper into his passion for long walks.</p>
           </div>
         </a>
 
@@ -44,8 +44,8 @@
             <img src="article-images/article_picture_02.jpg" />
           </div>
           <div class="article-content">
-            <h1>Very standard title here</h1>
-            <p>Abyssinian siberian but bombay. Cornish rex american bobtail british shorthair manx so donskoy but balinese . Persian persian, scottish fold but norwegian forest.</p>
+            <h1>Hottest eyewear trends</h1>
+            <p>This season, round sunglasses are making a comeback. Catfluencer Mimi shares her favourites!</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -53,8 +53,8 @@
             <img src="article-images/article_picture_03.jpg" />
           </div>
           <div class="article-content">
-            <h1>Hello I'm a cute cat</h1>
-            <p>Devonshire rex cornish rex and puma so cheetah. Savannah himalayan cheetah yet turkish angora or cougar. American bobtail tom.</p>
+            <h1>Local kittens cute beyond comprehesion</h1>
+            <p>Arthur and Lisa have have since their birth accounted for 97% of their owners camera roll.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -62,8 +62,8 @@
             <img src="article-images/article_picture_04.jpg" />
           </div>
           <div class="article-content">
-            <h1>Recent study: cats are extremly cute</h1>
-            <p>Aperiam voluptas yet vitae veniam or quam or iure. Voluptate ad yet ab for duis quaerat for non. Nequeporro.</p>
+            <h1>*kitty eyes* does work</h1>
+            <p>A recent study suggests that the most effective ways of convincing your human to drop everything and give you cuddles is to be approximately 5% cuter than one usually is.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -71,8 +71,8 @@
             <img src="article-images/article_picture_05.jpg" />
           </div>
           <div class="article-content">
-            <h1>This is a really long title about nothing in particular</h1>
-            <p>Skulle också kunna vara en lorem ipsum, men icke.</p>
+            <h1>New toy underwhleming</h1>
+            <p>"This green-orange color frog toy is nowhere near as fun as the blue one I had before". Owners have promised to do better next time, but 5-year old Kiki still isn't impressed.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -80,8 +80,8 @@
             <img src="article-images/article_picture_06.jpg" />
           </div>
           <div class="article-content">
-            <h1>Meow, says Bönan and Thea</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue sem et aliquam blandit. Proin posuere ex non ante euismod iaculis. Nullam cursus, lacus non.</p>
+            <h1>Happy backs, ahoy!</h1>
+            <p>According to yoga experts, these are the poses that will ensure your back stays flexible, and could even cure an aching back.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -89,8 +89,8 @@
             <img src="article-images/article_picture_07.jpg" />
           </div>
           <div class="article-content">
-            <h1>Meow, says Bönan and Thea</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue sem et aliquam blandit. Proin posuere ex non ante euismod iaculis. Nullam cursus, lacus non.</p>
+            <h1>Wooden basket ride was "ok"</h1>
+            <p>Lily much prefers being carried around in paper shopping bags, she told Catnews shortly after her first basket ride.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -98,8 +98,8 @@
             <img src="article-images/article_picture_08.jpg" />
           </div>
           <div class="article-content">
-            <h1>Meow, says Bönan and Thea</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue sem et aliquam blandit. Proin posuere ex non ante euismod iaculis. Nullam cursus, lacus non.</p>
+            <h1>Our love for cardboard boxes</h1>
+            <p>What makes a cardboard box truly great? We ask five readers what they look at when they decide if a cardboard box is mega interesting, or not so at all.</p>
           </div>
         </a>
         <a href="#" class="article article--regular">
@@ -107,8 +107,8 @@
             <img src="article-images/article_picture_09.jpg" />
           </div>
           <div class="article-content">
-            <h1>Meow, says Bönan and Thea</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque congue sem et aliquam blandit. Proin posuere ex non ante euismod iaculis. Nullam cursus, lacus non.</p>
+            <h1>Food prices on a rise</h1>
+            <p>According to researchers at CFPI (Cat Food Price Index), food prices are likely to increase over the next six months due to instability in the supply chain.</p>
           </div>
         </a>
       </section>
